Fix overlap bug

--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ body {
 
 .container-fluid {
     max-width: 900px;
+    padding-left: 2em;
+    padding-right: 2em;
     margin-right: auto;
     margin-left: auto;
 
@@ -99,7 +101,7 @@ a:hover {
     }
 }
 
-@media (max-width: 766px) {
+@media (max-width: 576px) {
     .container-fluid {
         padding-right: 3em;
         padding-left: 3em;
